<?xml version="1.0" encoding="utf-8"?>
<!--

    Casey Hird
    C12932552
    crhird@clemson.edu
    ******************
    activity_main.xml defines the layout for the main activity.
    References: zybooks 2.2, 2.5, 2.6, and 2.9
-->
    <!-- The code for linear layout is from zybooks 2.2 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- The code for ImageView is from zybooks 2.9 -->
    <ImageView
        android:id="@+id/pigImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginVertical="5dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/main_pic_description"
        android:src="@drawable/headshot" />

    <!-- The code for TextView is from zybooks 2.6 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:gravity="center"
        android:textSize="30sp" />

    <!-- The code for TextView is from zybooks 2.5 -->
    <Button
        android:layout_width="wrap_content"
        android:paddingHorizontal="50dp"
        android:layout_height="wrap_content"
        android:onClick="onLearnMoreClick"
        style="@style/button_style"
        android:text="@string/button_text" />
</LinearLayout>
